--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "noblox.js": "^4.5.6"
   },
   "engines": {
     "node": "12.x"
